...
        "description": "Message when the login failed for an unknown reason"
    },
    "or": "or",
    "@or": {
        "description": "Divider between options"
    },
    "welcome": "Welcome",
    "@welcome": {
        "description": "Greeting when trying to login"
    },
    "enterPassword": "Please enter your password",
    "@enterPassword": {
        "description": "Placeholder in password textfield"
...
        "description": "Message in case you have no internet connection on the starting page"
    },
    "swiftStrideApp": "HikeAid App",
    "@swiftStrideApp": {
        "description": "Application name"
    },
    "getStarted": "Get started",
    "@getStarted": {
        "description": "Text on enter app button"
    },
    "checkEmail": "Check your email",
    "@checkEmail": {
        "description": "Message when the user has to input a code send to the email address"
...
