...
                    padding: const EdgeInsets.all(20.0),
                    child: SizedBox(
                      width: MediaQuery.of(context).size.width * 0.7,
                      child: BlocBuilder<AuthSessionBloc, AuthSessionState>(
                        builder: (context, state) {
                          return CustomElevatedButton(
                            key: const ValueKey('GetStartedButton'),
                            backgroundColor: Theme.of(context).brightness == Brightness.light
                                ? Theme.of(context).colorScheme.primary
                                : Theme.of(context).colorScheme.onSurface,
                            text: AppLocalizations.of(context)!.getStarted,
                            textColor: Theme.of(context).brightness == Brightness.light
                                ? Theme.of(context).colorScheme.onPrimary
...
